--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-
+    <div class="container">
+        <h1>ToDo Web App</h1>
+        <hr width="100px">
+        <br>
+        <form action="">
+            <div class="inputDiv">
+               <input type="text" name="" id="myinput">
+               <button class="btn" id="btn">Add ToDo</button>
+            </div>
+            <div class="todoLists">
+                <div class="todo"></div>
+                </div>
+        
+            </div>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
