--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
         <form action="">
             <div class="inputDiv">
-               <input type="text" name="" id="myinput">
+               <input type="text" name="" id="myInput">
                <button class="btn" id="btn">Add ToDo</button>
             </div>
             <div class="todoLists">
